--- a/styles/card.css
+++ b/styles/card.css
@@ -2,7 +2,7 @@
     display: none;
     box-sizing: border-box;
     width: 2162px;
-    height: 330px;
+    max-height: 330px;
     justify-content: space-around;
     font-weight: 400;
     padding-top: 10px;
@@ -66,7 +66,7 @@
 
 
 .departament-card{
-    display: flex;
+    display: none;
     width: 1262px;
     max-height: 330px;
     justify-content: space-between;
@@ -89,4 +89,19 @@
 
 .departament-img{
     padding-top: 15px;
+}
+
+.departament-card__categories{
+    display: grid;
+    grid-template-columns: 150px 150px 150px;
+}
+
+.departament-card__categories__column{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+.column--text:hover{
+    color:#005CFF;
 }
