--- a/styles/card.css
+++ b/styles/card.css
@@ -1,16 +1,17 @@
 .card{
+    font-family:"Nunito Sans", sans-serif;
+    box-sizing: border-box;
     display: none;
-    width: 2162px;
-    max-height: 330px;
-    justify-content: space-around;
+    position: absolute;
+    justify-content: space-between;
+    width: 1262px;
     font-weight: 400;
     padding-top: 10px;
-    font-family:"Nunito Sans", sans-serif;
-    position: absolute;
-    top: 100%;
-    left: 74%;
+    left: 51%;
     transform: translateX(-50%);
     background-color: #FFFFFF;
+    z-index: 100;
+    margin: 0 auto;
 }
 
 .all-categories:hover .card{
@@ -44,9 +45,12 @@
 }
 
 .first{
-    padding-top: 15px;
+    padding-top: 10px;
 }
 
+.last{
+    padding-bottom: 10px;
+}
 
 .card__categories__row:hover .card__categories__departament--text{
     color:#005CFF;
@@ -59,13 +63,8 @@
 }
 
 .card__img{
-    width: 236px;
-    height: 298px;
     align-self: center;
-}
-
-.all-categories-img{
-    padding: 10px 0;
+    padding: 10px 10px 10px 400px;
 }
 
 .departament-card{
@@ -74,13 +73,14 @@
     max-height: 330px;
     justify-content: space-between;
     position: absolute;
-    padding-top: 10px;
+    padding: 10px 10px 0;
     font-weight: 400;
     font-family:"Nunito Sans", sans-serif;
     color: #656565;
     margin: 0 auto;
     left: 18%;
-
+    background-color: #F5F5F5;
+    z-index: 100;
 }
 
 .departament-card--title{
