--- a/styles/body.css
+++ b/styles/body.css
@@ -11,7 +11,6 @@
 
 .banner__text{
     position: relative;
-    font-family:"Nunito Sans", sans-serif;
     top: 20%;
     left: 55%;
     z-index: 1;
@@ -49,4 +48,140 @@
     letter-spacing: 0%;
     text-transform: uppercase;
     align-self: center;
+}
+
+.product-cards{
+    width: 1290px;
+    position: relative;
+    left: 15%;
+    margin-top: 100px;
+}
+
+.product-cards__text{
+    display: flex;
+    justify-content: space-between;
+    left: 30%;
+    font-family:"Nunito Sans", sans-serif;
+    margin-bottom: 25px;
+}
+
+.product-cards__text__title{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0px;
+}
+
+.product-cards__text__see-more:hover{
+    color:#005CFF;
+}
+
+.swiper{
+    display: flex;
+    gap: 15px
+}
+
+.product-cards__arrow{
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    color: #005CFF;
+    border: #005CFF 1px solid;
+    border-radius: 20px;
+    align-self: center;
+    user-select: none;
+}
+
+.product-cards__arrow:hover{
+    color: white;
+    background-color: #005CFF;
+}
+
+.product-cards__container{
+    display: flex;
+    gap:15px;
+    margin-bottom: 200px;
+}
+
+.product-cards__card{
+    padding: 4px;
+    border: 2px solid #DDDDDD;
+    border-radius: 10px;
+    max-width: 240px;
+}
+
+.product-cards__card__img{
+    width: 222;
+    height: 222;
+}
+
+.product-cards__card__img__new-tag{
+    color: #FFFFFF;
+    padding: 2px 4px;
+    background-color: #00264E;
+    width:40px;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 22px;
+    text-transform: uppercase;
+    border-radius: 4px;
+}
+
+.product-cards__card__title{
+    font-weight: 700;
+    font-size: 12px;
+    color: #303030;
+}
+
+.product-cards__card__text{
+    display: flex;
+    gap: 10px;
+}
+
+.product-cards__card__price-canceled{
+    font-weight: 400;
+    font-size: 12px;
+    text-transform: capitalize;
+    text-decoration: line-through;
+    color: #303030;
+}
+
+.product-cards__card__price{
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.product-cards__card__dicount{
+    color:#FFFFFF;
+    border: 1px solid;
+    border-radius: 4px;
+    padding: 5px;
+    background-color: #5EC0BE;
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 12px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-style: solid;
+    position: absolute;
+    left: 35%;
+}
+
+.product-cards__card__dicount:hover{
+    cursor: pointer;
+}
+
+.product-cards__card__footer-text{
+    font-weight: 400;
+    font-size: 12px;    
+}
+
+.product-cards__card__footer-text--bold{
+    font-weight: 700;
+    font-size: 12px;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    content: '';
 }
