--- a/styles/body.css
+++ b/styles/body.css
@@ -51,10 +51,14 @@
 }
 
 .product-cards{
-    width: 1290px;
+    width: 1380px;
     position: relative;
     left: 15%;
-    margin-top: 100px;
+    margin-top: 75px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 75px;
 }
 
 .product-cards__text{
@@ -62,7 +66,7 @@
     justify-content: space-between;
     left: 30%;
     font-family:"Nunito Sans", sans-serif;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 .product-cards__text__title{
@@ -74,11 +78,6 @@
 
 .product-cards__text__see-more:hover{
     color:#005CFF;
-}
-
-.swiper{
-    display: flex;
-    gap: 15px
 }
 
 .product-cards__arrow{
@@ -100,9 +99,8 @@
 .product-cards__container{
     display: flex;
     gap:15px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
-
 .product-cards__card{
     padding: 4px;
     border: 2px solid #DDDDDD;
@@ -173,7 +171,7 @@
 
 .product-cards__card__footer-text{
     font-weight: 400;
-    font-size: 12px;    
+    font-size: 12px;
 }
 
 .product-cards__card__footer-text--bold{
@@ -181,7 +179,40 @@
     font-size: 12px;
 }
 
-.swiper-button-next,
-.swiper-button-prev {
-    content: '';
+
+.product-with-description{
+    display: flex;
+    height: 747;
+    max-width: 1177;
+    justify-content: center;
+    gap: 45px;
+    padding-bottom: 75px;
+}
+
+.product-with-description__img{
+    background-color: #C2C2C2;
+}
+
+.product-with-description__description{
+    display: flex;
+    flex-direction: column;
+    align-items: initial;
+    width: 488px;
+    align-self: center;
+}
+
+
+.description__title{
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 140%;
+    letter-spacing: 4%;
+    text-transform: uppercase;
+}
+
+.description__text{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 140%;
+    letter-spacing: 5%;
 }
